crates/data-dict/tests/snapshots/validate_spec__todo_list_rejected.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: a
        type: string
        examples: [x, y]
        todo:
          - Write the description.
          - Check whether nulls are allowed.
────────────────────────────────────────
error[Q-1-11]: A value must have the type its schema requires.
  --> dict.yaml:10:11
   |
LL | /           - Write the description.
LL | |           - Check whether nulls are allowed.
   | |_____________________________________________^ Expected string, got array
   |
   = help: Ensure the value is a string (quoted if it contains special characters)?
