crates/data-dict/tests/snapshots/validate_spec__untranslatable_r_is_reported_as_s35.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
description: Each row is a survey response.
tables:
  - name: survey
    columns:
      - name: postcode
        type: string
        examples: ["NZ-1010"]
    constraints:
      - assert: sapply(postcode, is.na)
        language: r
────────────────────────────────────────
error[S35]: An expression may only use constructs the data-dict expression language can state.
  --> dict.yaml:11:17
   |
LL |       - assert: sapply(postcode, is.na)
   |                 ^ `sapply()` — the language has no equivalent
   |
   = help: Rewrite the rule using a supported construct, in R or in the data-dict language.
