crates/data-dict/tests/snapshots/validate_spec__warn_missing_learn_more.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: 0.1.0
────────────────────────────────────────
warning[S09]: A document should point readers to the spec with `$learn_more`.
  --> dict.yaml:1:1
   |
LL | $version: 0.1.0
   | ^ `$learn_more` is not set
   |
help: point readers to the spec
   |
LL + $learn_more: https://data-dict.tidyverse.org/
   |
